Resolve broken styles "onclick" of options.

--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,33 @@ footer {
   margin-top: -30px;
   height: 90px;
 }
-.text-size {
+.size-option-on, .quality-option-on {
   font-weight: bold;
   color: #000;
   padding-left: 4px;
   margin: 0;
   padding-bottom: 0;
+  cursor: pointer;
 }
-.selected-size {
-  -webkit-text-stroke: 1.5px #000;
+
+.size-option-off, .quality-option-off {
+  font-weight: bold;
   color: #fff;
+  padding-left: 4px;
+  margin: 0;
+  padding-bottom: 0;
+  cursor: pointer;
+}
+
+
+.selected-on {
+  -webkit-text-stroke: 1.5px #000;
+  color: #fff !important;
+}
+
+.selected-off {
+  -webkit-text-stroke: 1.5px #000;
+  color: #ffd800 !important;
 }
 
 .power { 
